ProgramacionPrimerCuatri/workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:26:07 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_11_pantalla_testParcial.o" "..\\src\\clase_11_pantalla_testParcial.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funciones.o" "..\\src\\funciones.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
20:32:53 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_11_pantalla_testParcial.o" "..\\src\\clase_11_pantalla_testParcial.c" 
..\src\clase_11_pantalla_testParcial.c: In function 'main':
..\src\clase_11_pantalla_testParcial.c:28:2: warning: implicit declaration of function 'disp_Baja'; did you mean 'disp_bajaMenu'? [-Wimplicit-function-declaration]
   28 |  disp_Baja(displaysList, DISPLEYS_LEN);
      |  ^~~~~~~~~
      |  disp_bajaMenu
..\src\clase_11_pantalla_testParcial.c:19:7: warning: unused variable 'seguir' [-Wunused-variable]
   19 |  char seguir= 's';
      |       ^~~~~~
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
20:40:23 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_11_pantalla_testParcial.o" "..\\src\\clase_11_pantalla_testParcial.c" 
..\src\clase_11_pantalla_testParcial.c: In function 'main':
..\src\clase_11_pantalla_testParcial.c:38:4: warning: implicit declaration of function 'disp_Baja'; did you mean 'disp_bajaMenu'? [-Wimplicit-function-declaration]
   38 |    disp_Baja(displaysList, DISPLEYS_LEN);
      |    ^~~~~~~~~
      |    disp_bajaMenu
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
20:47:27 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_11_pantalla_testParcial.o" "..\\src\\clase_11_pantalla_testParcial.c" 
..\src\clase_11_pantalla_testParcial.c: In function 'main':
..\src\clase_11_pantalla_testParcial.c:38:4: warning: implicit declaration of function 'disp_Baja'; did you mean 'disp_bajaMenu'? [-Wimplicit-function-declaration]
   38 |    disp_Baja(displaysList, DISPLEYS_LEN);
      |    ^~~~~~~~~
      |    disp_bajaMenu
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
20:49:27 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file clase_11_pantalla_testParcial.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
20:49:33 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
20:54:39 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
21:00:03 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
Info: Nothing to build for clase_11_pantalla_testParcial
21:06:45 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
21:07:05 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
21:08:57 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file clase_11_pantalla_testParcial.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
21:09:06 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
21:10:30 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
21:12:49 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
21:16:11 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
..\src\pantalla.c: In function 'disp_Baja':
..\src\pantalla.c:213:4: error: break statement not within loop or switch
  213 |    break;
      |    ^~~~~
21:16:21 **** Incremental Build of configuration Debug for project clase_11_pantalla_testParcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pantalla.o" "..\\src\\pantalla.c" 
gcc -o clase_11_pantalla_testParcial.exe "src\\clase_11_pantalla_testParcial.o" "src\\funciones.o" "src\\pantalla.o" 
